--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -23,7 +23,7 @@
     Hero's Biography<input id ="member3_bio" type="text" name="team[heroes][][bio]"><br>
     
     
-    <input type="submit" value="submit">
+    <button="submit" value="submit">
     </form>
     
 </body>
