--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -23,6 +23,6 @@
     Hero's Biography<input id="member3_bio" type="text" name="team[members][][bio]"/><br>
     
     
-    <button type="submit" value="submit">
+    <input type="submit" value="submit" name="submit">
     </form>
     
