Automatically backed up by Learn

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -2,7 +2,7 @@
 Team Motto: <%=@team_motto %>
 
 <%@team_members.each do |member| %>
-  member[:name]
+  Hero Name: member[:name]
   member[:power]
   member[:bio]
 <% end %>
