Automatically backed up by Learn

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -2,7 +2,7 @@
 Team Motto: <%=@team_motto %>
 
 <%@team_members.each do |member| %>
-  <p>Hero Name: member[:name]</p>
+  <p>Hero Name: <%=member[:name]%></p>
   member[:power]
   member[:bio]
 <% end %>
