Automatically backed up by Learn

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -3,6 +3,6 @@ Team Motto: <%=@team_motto %>
 
 <%@team_members.each do |member| %>
   Hero Name: <%=member[:name]%>
-  <%=member[:power]%>
+  Hero Power: <%=member[:power]%>
   member[:bio]
 <% end %>
