Automatically backed up by Learn

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -4,5 +4,5 @@ Team Motto: <%=@team_motto %>
 <%@team_members.each do |member| %>
   Hero Name: <%=member[:name]%>
   Hero Power: <%=member[:power]%>
-  member[:bio]
+  Hero Biography: <%=member[:bio]%>
 <% end %>
