--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,5 +1,5 @@
 <h1>Create a Team and Heroes!</h1>
-<body>
+
   <form action="/teams" method="POST">
   
   Team Name: <input type="text" name="team[name]" /><br>
@@ -7,23 +7,22 @@
   
 
   <h2>Hero 1</h2>
-    Hero's Name:<input type="text" name="team[heroes][][name]" /><br>
-    Hero's Power<input type="text" name="team[heroes][][power]"><br>
-    Hero's Biography<input type="text" name="team[heroes][][bio]">
+    Hero's Name:<input id="member1_name" type="text" name="team[members][][name]" /><br>
+    Hero's Power<input id="member1_power" type="text" name="team[members][][power]"/><br>
+    Hero's Biography<input id="member1_bio" type="text" name="team[members][][bio]"/>
   
   <h2>Hero 2</h2>
-    Hero's Name:<input type="text" name="team[heroes][][name]" /><br>
-    Hero's Power<input type="text" name="team[heroes][][power]"><br>
-    Hero's Biography<input type="text" name="team[heroes][][bio]">
+    Hero's Name:<input id="member2_name" type="text" name="team[members][][name]" /><br>
+    Hero's Power<input id="member2_power" type="text" name="team[members][][power]"/><br>
+    Hero's Biography<input id="member2_bio" type="text" name="team[members][][bio]"/>
   
   
   <h2>Hero 3</h2>
-    Hero's Name:<input type="text" name="team[heroes][][name]" /><br>
-    Hero's Power<input type="text" name="team[heroes][][power]"><br>
-    Hero's Biography<input type="text" name="team[heroes][][bio]"><br>
+    Hero's Name:<input id="member3_name" type="text" name="team[members][][name]" /><br>
+    Hero's Power<input id="member3_power" type="text" name="team[members][][power]"/><br>
+    Hero's Biography<input id="member3_bio" type="text" name="team[members][][bio]"/><br>
     
     
-    <input type="submit" value="Submit">
+    <input type="submit" value="submit" name="submit">
     </form>
     
-</body>
